<?xml version="1.0"?>
<package format="3">
  <name>pure_pursuit_controller</name>
  <version>0.1.0</version>
  <description>Pure Pursuit Controller Node with lingering lookahead point converted to ROS 2</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ackermann_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
